--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,10 @@ ELASTICSEARCH_INDEX=darkweb_records
 # 🔒 크롤러 설정
 CRAWLER_INTERVAL=30  # 크롤링 실행 간격 (분)
 TOR_PROXY=socks5h://localhost:9050  # Tor 프록시 주소
+API_ID = int(os.getenv("API_ID"))
+API_HASH = os.getenv("API_HASH")
+PHONE_NUMBER = os.getenv("PHONE_NUMBER")
+CHANNEL_USERNAME = os.getenv("CHANNEL_USERNAME", "").split(",")
 
 # 🔒 보고서 설정
 REPORT_TIME=00:00  # 보고서 생성 시간
