--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,10 @@
-# ✅ Database & Search Engine (MongoDB, Elasticsearch)
-pymongo[srv]  # MongoDB (비동기 지원 X → motor 사용)
-elasticsearch
-
-# ✅ Environment Variable Management
-python-dotenv
-
-# ✅ Web Scraping (Dark Web Crawlers)
-httpx  # requests 대신 비동기 HTTP 클라이언트
+aiohttp
+aiohttp_socks
+asyncio
 beautifulsoup4
-aiohttp  # 비동기 HTTP 요청 (일부 크롤링에 유용)
-aiosocks  # Tor SOCKS5 프록시 지원
-
-# ✅ Task Scheduling
-APScheduler
-asyncio  # 비동기 실행 필수 라이브러리
-
-# ✅ Discord Bot (비동기 방식 지원)
-discord.py
-
-# ✅ HTML Report Generation
-pyecharts
-
-# ✅ Async Database (MongoDB)
-motor  # pymongo의 비동기 버전 (MongoDB 용)
+elasticsearch
+motor
+pytz
+python-dotenv
+schedule
+telethon
